Fix footer spacing

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -64,7 +64,7 @@
                     {
                         \usebeamerfont{footer}
                         \usebeamercolor[fg]{frametitle}
-                        \vphantom{\strut/\strut}\insertframenumber
+                        \insertframenumber\phantom{\strut/\strut}
                     };
                     
                     % Total frame number.
