--- a/demo.tex
+++ b/demo.tex
@@ -7,7 +7,7 @@
 \title{Focus: \\ A Minimalist Beamer Theme}
 \subtitle{Subtitle}
 \author{Author 1 \\ Author 2}
-\titlegraphic{\includegraphics[scale=1.25]{focuslogo.png}}
+\titlegraphic{\includegraphics[scale=1.25]{focuslogo.pdf}}
 \institute{Institute Name \\ Institute Address}
 \date{dd mm yyyy}
 
