--- a/beamerthemefocus.sty
+++ b/beamerthemefocus.sty
@@ -15,6 +15,9 @@
 % You should have received a copy of the GNU General Public License
 % along with beamerthemefocus. If not, see <http://www.gnu.org/licenses/>.
 
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{beamerthemefocus}[2018/06/24 v1.0 Focus Beamer theme]
+
 \mode<presentation>
 
 \RequirePackage[T1]{fontenc}
