Fix enumerate and bibliography colors

--- a/beamercolorthemefocus.sty
+++ b/beamercolorthemefocus.sty
@@ -42,11 +42,11 @@
 \setbeamercolor{itemize item}{fg=main}
 \setbeamercolor{itemize subitem}{fg=main}
 
-\setbeamercolor{enumerate item}{fg=alert!90!black}
-\setbeamercolor{enumerate subitem}{fg=alert!90!black}
+\setbeamercolor{enumerate item}{fg=main!70!black}
+\setbeamercolor{enumerate subitem}{fg=main!70!black}
 
-\setbeamercolor{description item}{fg=alert!90!black}
-\setbeamercolor{description subitem}{fg=alert!90!black}
+\setbeamercolor{description item}{fg=main!70!black}
+\setbeamercolor{description subitem}{fg=main!70!black}
 
 \setbeamercolor{section in toc}{fg=main}
 \setbeamercolor{subsection in toc}{fg=main}
@@ -54,7 +54,7 @@
 \setbeamercolor{subsection number projected}{bg=main}
 
 \setbeamercolor{bibliography item}{fg=main}
-\setbeamercolor{bibliography entry author}{fg=alert!90!black}
+\setbeamercolor{bibliography entry author}{fg=main!70!black}
 \setbeamercolor{bibliography entry title}{fg=main}
 \setbeamercolor{bibliography entry location}{fg=main}
 \setbeamercolor{bibliography entry note}{fg=main}
