Revise outer theme - Make outer theme independent from inner, color and font theme - Replace usage of \tikz[remember picture, overlay]

--- a/beamercolorthemefocus.sty
+++ b/beamercolorthemefocus.sty
@@ -1,4 +1,5 @@
 % Copyright (C) 2018 Pasquale Claudio Africa.
+%               2018 Sebastian Friedl.
 %
 % This file is part of beamerthemefocus.
 %
@@ -24,11 +25,14 @@
 \definecolor{example}{RGB}{0, 110, 0}
 
 
-\setbeamercolor{frametitle}{fg=background, bg=main}
-
 \setbeamercolor{normal text}{fg=main, bg=background}
 \setbeamercolor{alerted text}{fg=alert}
 \setbeamercolor{example text}{fg=example}
+
+
+\setbeamercolor{frametitle}{fg=background, bg=main}
+
+\setbeamercolor{footline}{fg=background, bg=main}
 
 \setbeamercolor{block title}{bg=main!80!background, fg=background}
 \setbeamercolor{block body}{bg=main!10!background, fg=main}
