--- a/beamerfontthemefocus.sty
+++ b/beamerfontthemefocus.sty
@@ -1,4 +1,5 @@
 % Copyright (C) 2018 Pasquale Claudio Africa.
+%               2018 Sebastian Friedl.
 %
 % This file is part of beamerthemefocus.
 %
@@ -27,7 +28,7 @@
 \setbeamerfont{sectiontitle}{size=\huge, series=\scshape\bfseries}
 \setbeamerfont{frametitle}{size=\Large, shape=\scshape}
 
-\setbeamerfont{footer}{size=\normalsize}
+\setbeamerfont{footline}{size=\scriptsize}
 
 \setbeamerfont{focusframe}{size=\huge, shape=\scshape}
 
