--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -17,24 +17,6 @@
 
 \mode<presentation>
 
-% Main background.
-\defbeamertemplate*{background}{focus}{
-    % Titlepage.
-    \ifnum\c@framenumber=0
-        \begin{tikzpicture}[overlay, remember picture]
-            \fill[color=background] (current page.north west) rectangle (current page.south east);
-        \end{tikzpicture}
-    \fi
-}
-
-% Focus frame background.
-\defbeamertemplate{background}{focusframe}{
-    \ifnum\c@framenumber>0
-        \begin{tikzpicture}[overlay, remember picture]
-            \fill[color=main] (current page.north west) rectangle (current page.south east);
-        \end{tikzpicture}
-    \fi
-}
 
 % Title page.
 \defbeamertemplate*{title page}{focus}[1][]
@@ -103,25 +85,10 @@
 }
 \setbeamertemplate{section page}[focus]
 
-\AtBeginSection{
+\AtBeginSection{%
     \begin{frame}[plain, noframenumbering]{}
         \sectionpage
-    \end{frame}
-}
-
-% Shift footnotes to prevent overlap with footline.
-\addtobeamertemplate{footnote}
-{\ifnum\footlineheight>0\vspace{-0.55\footlineheight}\fi}
-{\ifnum\footlineheight>0\vspace{0.55\footlineheight}\fi}
-
-\renewcommand*{\footnoterule}
-{
-    \kern -3pt
-    \hrule width 2in height 0.4pt
-    \ifnum\footlineheight>0
-        \kern 0.55\footlineheight
-    \fi
-    \kern 2.6pt
+    \end{frame}%
 }
 
 \mode<all>
