Move dependencies around Packages are now \Required in packages using their commands. Therefore, the outer theme can be loaded independently without loading the main theme file

--- a/beamerouterthemefocus.sty
+++ b/beamerouterthemefocus.sty
@@ -19,6 +19,11 @@
 \mode<presentation>
 
 
+\RequirePackage{appendixnumberbeamer}% Don't number appendix frames.
+\RequirePackage{etoolbox}% \BeforeBeginEnvironment
+\RequirePackage{tikz}
+
+
 
 
 % FRAMETITLE TEMPLATES -------------------------------------------------------------------------------------------------
