--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -23,6 +23,20 @@
 
 
 
+% CUSTOMIZE STRUCTURE ELEMENTS ---------------------------------------------------------------------
+
+\setbeamertemplate{blocks}[default]
+
+\setbeamertemplate{section in toc}[square]
+\setbeamertemplate{subsection in toc}[square]
+
+\setbeamertemplate{itemize items}[square]
+\setbeamertemplate{itemize subitem}[triangle]
+
+
+
+% STRUCTURE FRAME TEMPLATE DEFINITIONS -------------------------------------------------------------
+
 % Title page.
 \defbeamertemplate*{title page}{focus}{%
     {\usebeamercolor{frametitle}\colorlet{focus@@temp}{bg}%
@@ -46,10 +60,10 @@
     
     % Set the title graphic in a zero-height box, so that
     % the position of other elements is not affected.
-    \vbox to 0pt {
+    {\vfuzz=9999pt\vbox to 0pt {
         \raggedleft
         \inserttitlegraphic
-    }
+    }}
     
     \begin{minipage}[t]{\textwidth}
         \usebeamerfont{author}
@@ -89,12 +103,14 @@
     \begin{minipage}[t][0.55\paperheight]{\textwidth}
     \end{minipage}
 }
-\setbeamertemplate{section page}[focus]
 
 \AtBeginSection{%
     \begin{frame}[plain, noframenumbering]{}
         \sectionpage
     \end{frame}%
 }
+
+
+
 
 \mode<all>
