Inherit frametitle color; update documentation

--- a/beamercolorthemefocus.sty
+++ b/beamercolorthemefocus.sty
@@ -29,8 +29,8 @@
 \setbeamercolor{alerted text}{fg=alert}
 \setbeamercolor{example text}{fg=example}
 
-
-\setbeamercolor{frametitle}{fg=background, bg=main}
+\setbeamercolor{titlelike}{fg=background, bg=main}
+\setbeamercolor{frametitle}{parent={titlelike}}
 
 \setbeamercolor{footline}{fg=background, bg=main}
 
